--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^5.1.0",
+    "@react-native-firebase/analytics": "^14.2.2",
+    "@react-native-firebase/app": "^14.2.2",
+    "@react-native-firebase/auth": "^14.2.2",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
