--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@reduxjs/toolkit": "^1.7.1",
     "dayjs": "^1.10.7",
     "react": "17.0.2",
     "react-native": "0.66.4",
@@ -31,7 +32,9 @@
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-vector-icons": "^9.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
