--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.10.7",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-actions-sheet": "^0.5.8",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-swiper": "^1.1.4",
