--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.66.4",
     "react-native-actions-sheet": "^0.5.8",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-picker": "^4.7.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-safe-area-context": "^3.3.2",
@@ -45,6 +46,7 @@
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.38",
     "@types/react-native": "^0.66.12",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
