--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
+    "build": "cd android && ./gradlew bundleRelease",
+    "bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/",
+    "adb:install": "adb install android/app/build/outputs/apk/release/app-release.apk",
     "android:clean": "cd android/ && ./gradlew clean && cd .. && react-native run-android",
     "android:build": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
     "android:install": "cd android && ./gradlew assembleRelease && ./gradlew installRelease",
