--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -158,6 +158,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('TRACKINGBP_UPLOAD_STORE_FILE')) {
+                storeFile file(TRACKINGBP_UPLOAD_STORE_FILE)
+                storePassword TRACKINGBP_UPLOAD_STORE_PASSWORD
+                keyAlias TRACKINGBP_UPLOAD_KEY_ALIAS
+                keyPassword TRACKINGBP_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -171,9 +179,9 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
 
