--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-navigation-bar-color": "^2.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
