--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -208,11 +208,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     // For animated GIF support
     implementation 'com.facebook.fresco:animated-gif:2.6.0'
-    // For WebP support, including animated WebP
-    implementation 'com.facebook.fresco:animated-webp:2.6.0'
-    implementation 'com.facebook.fresco:webpsupport:2.6.0'
-    // For WebP support, without animations
-    implementation 'com.facebook.fresco:webpsupport:2.6.0'
+    implementation "androidx.core:core-splashscreen:1.0.0-beta01"
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics'
 
