--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "android:hockeyapp": "cd android && ./gradlew assembleRelease && puck -submit=auto app/build/outputs/apk/app-release.apk",
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
-    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'"
+    "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'",
+    "generate": "npx react-native generate-bootsplash ./assets/original_icon.png --background-color=ef4565   --logo-width=100 --assets-path=./assets --flavor=main"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^5.1.0",
@@ -33,6 +34,7 @@
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-actions-sheet": "^0.5.8",
+    "react-native-bootsplash": "^4.1.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.1",
     "react-native-linear-gradient": "^2.5.6",
