--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "generate": "npx react-native generate-bootsplash ./assets/original_icon.png --background-color=ef4565   --logo-width=100 --assets-path=./assets --flavor=main"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-firebase/analytics": "^14.2.2",
     "@react-native-firebase/app": "^14.2.2",
@@ -44,7 +45,8 @@
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
