--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
+    "@sanar/react-native-highlight-text": "^1.0.2",
     "dayjs": "^1.10.7",
     "react": "17.0.2",
     "react-native": "0.66.4",
