--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@reduxjs/toolkit": "^1.7.1",
     "@sanar/react-native-highlight-text": "^1.0.2",
     "dayjs": "^1.10.7",
+    "i18n-js": "^3.8.0",
+    "lodash.memoize": "^4.1.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-actions-sheet": "^0.5.8",
@@ -40,6 +42,7 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-localize": "^2.1.5",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-safe-area-context": "^3.3.2",
@@ -53,7 +56,9 @@
     "@babel/core": "7.16.7",
     "@babel/runtime": "7.16.7",
     "@react-native-community/eslint-config": "2.0.0",
+    "@types/i18n-js": "^3.8.2",
     "@types/jest": "^27.4.0",
+    "@types/lodash.memoize": "^4.1.6",
     "@types/react": "^17.0.38",
     "@types/react-native": "^0.66.12",
     "@types/react-native-vector-icons": "^6.4.10",
