add support for redux-persit and add set lenguage and countryCode

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seguimiento-hta-app",
+  "name": "tracking-blood-pressure-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
