--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-native-firebase/app": "^14.2.2",
     "@react-native-firebase/auth": "^14.2.2",
     "@react-native-firebase/storage": "^14.2.3",
+    "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
@@ -45,6 +46,7 @@
     "react-native-localize": "^2.1.5",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-vector-icons": "^9.0.0",
