--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "victory-native": "^36.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
