--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-bootsplash": "^4.1.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.1",
+    "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.5",
     "react-native-navigation-bar-color": "^2.0.1",
@@ -68,6 +69,7 @@
     "@types/lodash.memoize": "^4.1.6",
     "@types/react": "^17.0.38",
     "@types/react-native": "^0.66.12",
+    "@types/react-native-indicators": "^0.16.2",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "26.6.3",
