--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
     "@sanar/react-native-highlight-text": "^1.0.2",
+    "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.26.0",
     "dayjs": "^1.10.7",
     "i18n-js": "^3.8.0",
@@ -43,6 +44,7 @@
     "react-native": "0.66.4",
     "react-native-actions-sheet": "^0.5.8",
     "react-native-bootsplash": "^4.1.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.1",
     "react-native-indicators": "^0.17.0",
