add screen wait1minute

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.66.4",
     "react-native-actions-sheet": "^0.5.8",
     "react-native-bootsplash": "^4.1.0",
+    "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-image-picker": "^4.7.1",
@@ -70,10 +71,10 @@
     "@types/lodash.memoize": "^4.1.6",
     "@types/react": "^17.0.38",
     "@types/react-native": "^0.66.12",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-indicators": "^0.16.2",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
-    "@types/react-native-dotenv": "^0.2.0",
     "babel-jest": "26.6.3",
     "eslint": "7.14.0",
     "jest": "26.6.3",
