--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screen-keyboard": "^1.2.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.0.0",
