--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'",
-    "generate": "npx react-native generate-bootsplash ./assets/original_icon.png --background-color=ef4565   --logo-width=100 --assets-path=./assets --flavor=main"
+    "generate": "npx react-native generate-bootsplash ./assets/original_icon.png --background-color=ef4565   --logo-width=100 --assets-path=./assets --flavor=main",
+    "adb:connect": "adb reverse tcp:9090 tcp:9090"
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "github:ptomasroos/react-native-multi-slider",
