--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.1",
     "@sanar/react-native-highlight-text": "^1.0.2",
+    "ajv": "^6.12.6",
     "axios": "^0.26.0",
     "dayjs": "^1.10.7",
     "i18n-js": "^3.8.0",
