Squashed commit of the following:
commit 671a15c6abe438ffc9b851191a4214283ea1214a
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sun May 1 07:46:10 2022 -0500

    iOS stable version with 1 blocking bug and some visual bugs

commit 4294925d774d526d3403fd83a401f5fe6a0e6864
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 18:35:34 2022 -0500

    modify home screen

commit 7a5fa473fa0e0c6b4cfd0f2e393dce26422639f4
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 18:06:19 2022 -0500

    fix name screen HealthInfo

commit 9ba9ad1203c668caf3777ad2acf55ae9b8b49d61
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 17:47:30 2022 -0500

    add changes in selectUserType and set default addrees

commit e188430afbaadece67b86babc4cf3cc1002faae9
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 17:11:58 2022 -0500

    fixes in SwiperUnit component and changes in birthdate screen

commit 618be98119d20d300b59cc12f3e167829d9b1c02
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 16:27:49 2022 -0500

    fix headerSteps on iOS

commit ba98c056112e88f61640816c65cdd83a730bfadd
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 13:21:13 2022 -0500

    adapt birthdate singup screen to ios

commit f05cda8c6e173a8f6bf9970d003cdc9c41e43010
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat Apr 30 11:20:31 2022 -0500

    config APNs and fix bug en verifyCodePhone

commit b0463246ffc799039b2cfa9a2ed146e65e4f4ec8
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Thu Apr 28 19:52:15 2022 -0500

    setup ios firebase

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tracking-blood-pressure-app",
+  "name": "simagna",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -37,6 +37,7 @@
     "@sanar/react-native-highlight-text": "^1.0.2",
     "axios": "^0.26.0",
     "dayjs": "^1.10.7",
+    "fast-text-encoding": "^1.0.3",
     "i18n-js": "^3.8.0",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
