--- a/ios/TrackingBP/Info.plist
+++ b/ios/TrackingBP/Info.plist
@@ -56,6 +56,7 @@
 	<string>$(PRODUCT_NAME) would like access to your photo gallery</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Entypo.ttf</string>
 		<string>Nunito-Light.ttf</string>
 		<string>Nunito-Regular.ttf</string>
 		<string>Nunito-SemiBold.ttf</string>
