Squashed commit of the following:
commit 7fbce6e1ff5a7db9faffa7569ad53525e15d1a74
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 20:30:48 2022 -0500

    add custom hook

commit 0b777e7805c2da64adcf2faf64bac2e3ac120a69
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 19:57:23 2022 -0500

    updgrade firebase lib, create usePermissions hook

commit 47315a1a1be0d79c9a0ed71d70c8d5c982e8a477
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 17:32:17 2022 -0500

    add notificiationservice

commit c839666413bd66e5fbe99b8eec2d8910a989dad3
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 15:52:08 2022 -0500

    config icon notification android

commit babcb702ba9ab3ea30870ae71414d0b0dd1f5195
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 15:25:46 2022 -0500

    add notifee

commit 9ada04437ed95536798b47d1fadeba40cc56d336
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 13:25:30 2022 -0500

    add reducers and selectors in blood-pressure slice

commit 859f736447d24119df8d8d46bdf39628df02d316
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 12:00:30 2022 -0500

    add datatimepicker

commit 21e8ceabd4840eb902fc3059482612f8007901f6
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Fri May 13 11:12:15 2022 -0500

    add new font to android and create reminder blood pressure screen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,11 +78,31 @@ import com.android.build.OutputFile
  * ]
  */
 
+project.ext {
+  set('react-native', [
+    versions: [
+      // Overriding Build/Android SDK Versions
+      android : [
+        minSdk    : 19,
+        targetSdk : 31,
+        compileSdk: 31,
+        buildTools: "30.0.3"
+      ],
+
+      // Overriding Library SDK Versions
+      firebase: [
+        // Override Firebase SDK Version
+        bom           : "29.2.1"
+      ],
+    ],
+  ])
+}
+
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
 ]
 project.ext.vectoricons = [
-    iconFontNames: [ 'FontAwesome.ttf', 'Entypo.tff' ] // Name of the font files you want to copy
+    iconFontNames: [ 'FontAwesome.ttf', 'Entypo.ttf' ] // Name of the font files you want to copy
 ]
 
 
