--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'",
     "generate": "npx react-native generate-bootsplash ./assets/original_icon.png --background-color=ef4565   --logo-width=100 --assets-path=./assets --flavor=main",
-    "adb:connect": "adb reverse tcp:9090 tcp:9090"
+    "adb:connect": "adb reverse tcp:8081 tcp:8081"
   },
   "dependencies": {
+    "@notifee/react-native": "^5.2.2",
     "@ptomasroos/react-native-multi-slider": "github:ptomasroos/react-native-multi-slider",
     "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-native-community/datetimepicker": "^5.1.0",
-    "@react-native-firebase/analytics": "^14.2.2",
-    "@react-native-firebase/app": "^14.2.2",
-    "@react-native-firebase/auth": "^14.2.2",
-    "@react-native-firebase/storage": "^14.2.3",
+    "@react-native-firebase/analytics": "^14.9.3",
+    "@react-native-firebase/app": "^14.9.3",
+    "@react-native-firebase/auth": "^14.9.3",
+    "@react-native-firebase/messaging": "^14.9.3",
+    "@react-native-firebase/storage": "^14.9.3",
     "@react-native-picker/picker": "^2.2.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
