--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,7 +157,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.bettion.bettion"
+        applicationId "com.bettion"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
