--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,7 +6,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '11.0'
 
-target 'TrackingBP' do
+target 'BettiOn' do
   config = use_native_modules!
 
   use_react_native!(
@@ -17,7 +17,7 @@ target 'TrackingBP' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
-  target 'TrackingBPTests' do
+  target 'BettiOnTests' do
     inherit! :complete
     # Pods for testing
   end
