--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-screens": "^3.10.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "12.1.1",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
