--- a/ios/BettiOn/Info.plist
+++ b/ios/BettiOn/Info.plist
@@ -37,6 +37,8 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
