--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "start:clear": "npm start --clear-cache",
     "test": "jest",
     "lint": "eslint .",
     "build": "cd android && ./gradlew bundleRelease",
