Squashed commit of the following:
commit 14dfa8e011b6fe63549bcf11379885bd69add696
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon May 23 18:52:52 2022 -0500

    generate version 2.0

commit 64ae6c764f07097a53d6442a3b51173489052039
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat May 21 23:24:31 2022 -0500

    WIP add monitorCard

commit 008ceb778477d81b2b993cac0289cd6dedd3c3db
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat May 21 21:39:56 2022 -0500

    add headerSearchBar

commit aaace4d80c20a7a7fa60e59686d5d25ba2143702
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Sat May 21 18:46:27 2022 -0500

    add partiral darkmode support

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,7 +157,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.bettion"
+        applicationId "com.bettion.bettion"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
