Squashed commit of the following:
commit 387c6911247de2f942a8b6764bd4c01ed6943681
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 13:03:56 2022 -0500

    add crashlytics to track errors in the trigger to remain blood pressure

commit 7c98c0525108c957e65fab807ce22b2fed9580b7
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 12:23:20 2022 -0500

    improve ErrorBoundary for crash errors

commit de30bf21fdcc2cd6fdbdccb6d7ddacf649e7c635
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 11:27:00 2022 -0500

    change productId to com.rambit.bettion

commit 2b6f4a1c82c60f0dd198bb30694c1d3f86c71192
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Wed May 25 11:11:48 2022 -0500

    add appErrorBoundary

commit d93d516b7b87ad93919e549c517383a9bbf9b91a
Author: jcaviedesc <jcamilocc97@gmail.com>
Date:   Mon May 23 20:52:11 2022 -0500

    setup initial crashltics library to report errors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 import com.android.build.OutputFile
 
@@ -157,7 +158,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.bettion.bettion"
+        applicationId "com.rambit.bettion"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -202,6 +203,10 @@ android {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
+            firebaseCrashlytics {
+                nativeSymbolUploadEnabled true
+                unstrippedNativeLibsDir 'build/intermediates/merged_native_libs/release/out/lib'
+            }
         }
     }
 
