--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "simagna",
-  "version": "2.0.0",
+  "name": "bettion",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -30,6 +30,7 @@
     "@react-native-firebase/analytics": "^14.9.3",
     "@react-native-firebase/app": "^14.9.3",
     "@react-native-firebase/auth": "^14.9.3",
+    "@react-native-firebase/crashlytics": "^14.9.4",
     "@react-native-firebase/messaging": "^14.9.3",
     "@react-native-firebase/storage": "^14.9.3",
     "@react-native-picker/picker": "^2.2.1",
@@ -59,6 +60,7 @@
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screen-keyboard": "^1.2.2",
     "react-native-screens": "^3.10.2",
