--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bettion",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -39,6 +39,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@realm/react": "^0.3.1",
     "@reduxjs/toolkit": "^1.7.1",
     "@sanar/react-native-highlight-text": "^1.0.2",
     "axios": "^0.26.0",
@@ -55,6 +56,7 @@
     "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-image-picker": "^4.7.1",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -71,6 +73,7 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
+    "realm": "^10.19.5",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "victory-native": "^36.2.1"
@@ -92,7 +95,9 @@
     "eslint": "7.14.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.66.2",
+    "react-native-flipper": "^0.153.0",
     "react-test-renderer": "17.0.2",
+    "redux-flipper": "^2.0.2",
     "typescript": "^4.5.4"
   },
   "jest": {
