--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bettion",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -28,6 +28,7 @@
     "@notifee/react-native": "^5.2.2",
     "@ptomasroos/react-native-multi-slider": "github:ptomasroos/react-native-multi-slider",
     "@react-native-async-storage/async-storage": "^1.15.17",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-firebase/analytics": "^14.9.3",
     "@react-native-firebase/app": "^14.9.3",
