--- a/ios/BettiOn/Info.plist
+++ b/ios/BettiOn/Info.plist
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.1040970046775-cn36iogv48i84s15qa1gcuv6569ncn63</string>
+				<string>com.googleusercontent.apps.1040970046775-tjag41gt9ao3uda0tdcluj877u6o46tl</string>
 			</array>
 		</dict>
 	</array>
@@ -58,6 +58,7 @@
 	<string>$(PRODUCT_NAME) would like access to your photo gallery</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Nunito-Bold.ttf</string>
 		<string>Entypo.ttf</string>
 		<string>Nunito-Light.ttf</string>
 		<string>Nunito-Regular.ttf</string>
