--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "@react-native-firebase/messaging": "^14.9.3",
     "@react-native-firebase/storage": "^14.9.3",
     "@react-native-picker/picker": "^2.2.1",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.0.11",
     "@realm/react": "^0.3.1",
     "@reduxjs/toolkit": "^1.7.1",
@@ -64,6 +65,7 @@
     "react-native-localize": "^2.1.5",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^3.3.2",
@@ -73,6 +75,7 @@
     "react-native-svg": "12.1.1",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.0.0",
+    "react-native-webview": "^11.22.7",
     "react-redux": "^7.2.6",
     "realm": "^10.19.5",
     "redux": "^4.1.2",
