--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -162,7 +162,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "0.4.4"
+        versionName "0.4.5-betta"
     }
     splits {
         abi {
