--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bettion",
-  "version": "0.4.4",
+  "version": "0.4.5-betta",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
