--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bettion",
-  "version": "0.4.5-betta",
+  "version": "0.4.6",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -78,7 +78,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-webview": "^11.22.7",
     "react-redux": "^7.2.6",
-    "realm": "^10.19.5",
+    "realm": "^10.21.1",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "snakecase-keys": "^5.4.4",
