--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "cucumber.glue": [
+        "src/test/**/*.java",
+        "features/**/*.ts",
+        "src/**/*.tsx",
+        "features/**/*.php",
+        "features/**/*.py",
+        "tests/**/*.py",
+        "tests/**/*.rs",
+        "features/**/*.rs",
+        "features/**/*.rb",
+        "*specs*/**/.cs"
+      ]
 }
