--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "lodash": "^4.17.21",
     "lodash.memoize": "^4.1.2",
     "react": "17.0.2",
-    "react-native": "0.66.4",
+    "react-native": "^0.66.5",
     "react-native-actions-sheet": "^0.5.8",
     "react-native-bootsplash": "^4.1.0",
     "react-native-countdown-circle-timer": "^3.0.9",
