--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bettion",
-  "version": "0.4.11",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -64,6 +64,7 @@
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.5",
+    "react-native-modal": "^13.0.1",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-pell-rich-editor": "^1.8.8",
